Swapped #98002e for #a50034, updated package.json in Campus Map project to fix build bug

--- a/app/assets/stylesheets/layout_old/admission/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/admission/primary-content.scss
@@ -27,7 +27,7 @@
 	  }
 	  h3 {
 	    clear: both;
-	    color: #98002e;
+	    color: #a50034;
 	    font-family: "Open Sans";
 	    font-weight: normal;
 	    font-size: 16px;
