--- a/app/assets/stylesheets/widgets/home_page/blog_stories.scss
+++ b/app/assets/stylesheets/widgets/home_page/blog_stories.scss
@@ -41,7 +41,7 @@
       }
       .title {
         text-transform: none;
-        color: #98002e;
+        color: #a50034;
         font-size: 22px;
         line-height: 26px;
         margin: 0;
@@ -61,7 +61,7 @@
       }
       .source a:hover, a.tag:hover {
         opacity: 0.8;
-        color: #98002e;
+        color: #a50034;
       }
     }
     .third {
@@ -155,7 +155,7 @@
         max-height: 265px;
       }
       .title {
-        color: #98002e;
+        color: #a50034;
         text-transform: none;
         min-height: 50px;
       }
@@ -171,7 +171,7 @@
       width: 100%;
       margin-bottom: 15px;
       border: 1px solid #d8d8d8;
-      color: #98002e;
+      color: #a50034;
       background: #FFFFFF;
       box-shadow: 0 rgba(0, 0, 0, 0.1);
       border-radius: 3px;
@@ -185,7 +185,7 @@
         background-color: #fff;
       }
       a {
-        color: #98002e;
+        color: #a50034;
         text-decoration: none;
       }
       p {
@@ -285,7 +285,7 @@
         &:hover a {
           z-index: 2;
           opacity: 1;
-          color: #98002e;
+          color: #a50034;
         }
         a {
           padding: 14px 50px 13px 24px;
