--- a/app/assets/stylesheets/widgets/three-box-callout.scss
+++ b/app/assets/stylesheets/widgets/three-box-callout.scss
@@ -25,14 +25,14 @@
       // width: 160px;
     }
     .image-container {
-      height: 130px; 
+      height: 130px;
     }
     img {
       max-width: 100%;
     }
     .caption {
       height: 50px;
-      background-color: #98002e;
+      background-color: #a50034;
       top: 0px;
       .text {
         text-align: center;
