--- a/static/_files/css/style_2013.css
+++ b/static/_files/css/style_2013.css
@@ -252,7 +252,7 @@ p, li {
 
 a {
     text-decoration: none;
-    color: #98002E;
+    color: #a50034;
 }
 a:link, p.source a:link,
 a:visited, p.source a:visited {
@@ -311,7 +311,7 @@ a:hover, p.source a:hover {
 .alert{
     margin: 0;
     font-size: large;
-    background-color: #98002E;
+    background-color: #a50034;
     color: #FFFFFF;
     text-align: center;
 }
@@ -2521,7 +2521,7 @@ a.infoFor-btn {
         right: 0;
         width: 260px;
         color: white;
-        background-color: #98002E;
+        background-color: #a50034;
         padding:10px;
         height: 100px;
         display:none;
@@ -2558,13 +2558,13 @@ a.infoFor-btn {
     }
 
     .exploration article a:hover, .values article a:hover{
-        color:#98002E !important;
+        color:#a50034 !important;
     }
 
     .videoLink.button{
         display:block;
         padding:5px 10px;
-        background-color:#98002E;
+        background-color:#a50034;
         color:#fff;
         width:110px;
         margin:10px 0 0 0;
@@ -2700,7 +2700,7 @@ a.infoFor-btn {
     }
 
     .creativity article a:hover{
-        color:#98002E !important;
+        color:#a50034 !important;
     }
 
     .global .bg1{
