--- a/subprojects/campus-map/source/static/app/sass/flexslider/flexslider.scss
+++ b/subprojects/campus-map/source/static/app/sass/flexslider/flexslider.scss
@@ -144,7 +144,7 @@ html[xmlns] .flexslider .slides {
 }
 .flex-direction-nav a.flex-prev:before,
 .flex-direction-nav a.flex-next:before {
-	color: #98002e;
+	color: #a50034;
 }
 .flex-direction-nav a.flex-next:before {
   content: '\f002';
