--- a/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
@@ -267,7 +267,7 @@ cascade-build: false
                             <a href="../index.aspx" title="Chapman University Website Home Page">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="chapman-logo" viewBox="0 0 273.58 28.08">
                                     <defs>
-                                        <style>.cls-1 { fill: #98002e; } .cls-2 { fill: #231f20; }</style>
+                                        <style>.cls-1 { fill: #a50034; } .cls-2 { fill: #231f20; }</style>
                                     </defs>
                                     <title>Chapman Horizontal Color</title>
                                     <path class="cls-1" d="M13.04 14.46L0 27.49V14.46h13.04zM0 13.62V.59l13.04 13.03H0zM27.49 0L14.46 13.03V0h13.03zM13.62 13.03L.59 0h13.03v13.03zM15.05 13.62L28.08.59v13.03H15.05zM28.08 14.46v13.03L15.05 14.46h13.03zM13.62 15.05L.59 28.08h13.03V15.05zM14.46 15.05v13.03h13.03L14.46 15.05z"></path>
