--- a/subprojects/degrees-and-programs/source/static/app/sass/helpers/_theme-variables.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/helpers/_theme-variables.scss
@@ -19,7 +19,7 @@ $futura: "futura-pt", verdana, sans-serif;
 @import 'color-palette/_color';
 
 // Colors
-$burgundy: #98002e; // Chapman Red
+$burgundy: #a50034; // Chapman Red
 $paprika: #7f0026; // Chapman Dark Red
 $mexican-red: #a82439;
 $cardinal: #ba183e;
