--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -6,10 +6,8 @@ it should be added here as a variable. Changing the value
 of these variables will affect the colors sitewide. */
 $font-stack-body: "proxima-nova", verdana, sans-serif;
 $font-stack-heading: "futura-pt", verdana, sans-serif;
-$cu-red: #98002e;
-$cu-red-rgb-transparent: rgba(168,36,57,0.95);
-// $cu-red2: #830c28; // Old red replaced by $cu-red to keep colors standard
-// $cu-red3: #98002E; // Old red replaced by $cu-red to keep colors standard
+$cu-red: #a50034;
+$cu-red-rgb-transparent: rgba(165, 0, 52, 0.95);
 $cu-dark-red: #851c2b;
 $cu-off-white: #f7f6f0;
 $cu-light-grey: #eaeaea;
