--- a/app/assets/stylesheets/widgets/flickr-picasa-links.scss
+++ b/app/assets/stylesheets/widgets/flickr-picasa-links.scss
@@ -45,7 +45,7 @@
   }
   .more-link {
     display: block;
-    color: #98002e;
+    color: #a50034;
     font-weight: bold;
     .arrow {
       color: $cu-red;
