--- a/app/assets/stylesheets/widgets/home_page/chapman_family.scss
+++ b/app/assets/stylesheets/widgets/home_page/chapman_family.scss
@@ -12,6 +12,7 @@
     }
     h2 {
       margin-top: 0;
+      font-size: 24px;
     }
   }
 }
@@ -30,6 +31,10 @@
       }
       .third:nth-of-type(3) {
         padding-left: 20px;
+      }
+      .heading {
+        font-size: 40px;
+        line-height: 40px;
       }
     }
   }
