--- a/app/assets/stylesheets/themes/home.scss
+++ b/app/assets/stylesheets/themes/home.scss
@@ -164,15 +164,17 @@ h1, h2, h3, h4, h5, h6 {
   .section {
     position: relative;
     .heading {
-      font-size: 32px;
-      line-height: 38px;
+      font-size: 34px;
+      line-height: 34px;
       margin: 0 15px 15px;
     }
     .subheading {
       font-size: 22px;
-      line-height: 28px;
+      line-height: 22px;
       text-transform: none;
       margin: 0;
+      font-weight: 400;
+      font-family: $font-stack-heading;
     }
     &.dark-bg {
       background-color: #111111;
@@ -186,13 +188,13 @@ h1, h2, h3, h4, h5, h6 {
         color: $grey;
       }
       .heading {
-        font-size: 22px;
-        line-height: 28px;
+        // font-size: 22px;
+        // line-height: 28px;
         text-align: center;
       }
       .subheading {
-        font-size: 18px;
-        line-height: 18px;
+        // font-size: 18px;
+        // line-height: 18px;
         margin: 0 0 40px 0;
         text-align: center;
       }
@@ -245,12 +247,12 @@ h1, h2, h3, h4, h5, h6 {
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       h3 {
-        font-family: $font-stack-heading;
+        font-family: $font-stack-heading-condensed;
         font-weight: 800;
         padding: 0;
         margin: 0 0 10px 0;
         font-size: 18px;
-        line-height: 24px;
+        line-height: 18px;
       }
       img {
         width: 100%;
@@ -276,7 +278,7 @@ h1, h2, h3, h4, h5, h6 {
     .section {
       .heading {
         font-size: 42px;
-        line-height: 50px;
+        line-height: 42px;
       }
       .subheading {
         font-size: 26px;
@@ -284,12 +286,12 @@ h1, h2, h3, h4, h5, h6 {
       }
       &.light-bg {
         .heading {
-          font-size: 28px;
-          line-height: 36px;
+          // font-size: 28px;
+          // line-height: 36px;
         }
         .subheading {
-          font-size: 24px;
-          line-height: 24px;
+          // font-size: 24px;
+          // line-height: 24px;
           margin: 0 0 75px 0;
           font-weight: 800;
         }
@@ -303,7 +305,7 @@ h1, h2, h3, h4, h5, h6 {
     .section {
       padding: 60px 0;
       .heading {
-        font-size: 52px;
+        font-size: 62px;
         line-height: 62px;
       }
       .subheading {
@@ -312,18 +314,18 @@ h1, h2, h3, h4, h5, h6 {
       }
       &.light-bg {
         .heading {
-          font-size: 32px;
-          line-height: 42px;
+          // font-size: 32px;
+          // line-height: 42px;
         }
         .subheading {
-          font-size: 26px;
-          line-height: 38px;
+          // font-size: 26px;
+          // line-height: 38px;
           margin: 0 0 75px 0;
         }
       }
       .third h3 {
         font-size: 24px;
-        line-height: 30px;
+        line-height: 24px;
       }
     }
 
@@ -335,12 +337,12 @@ h1, h2, h3, h4, h5, h6 {
     .section {
       padding: 75px 0;
       .heading {
-        font-size: 64px;
-        line-height: 74px;
+        font-size: 68px;
+        line-height: 68px;
       }
       .subheading {
-        font-size: 32px;
-        line-height: 46px;
+        font-size: 40px;
+        line-height: 48px;
       }
     }
   }
