--- a/app/assets/stylesheets/widgets/home_page/accessibility_statement.scss
+++ b/app/assets/stylesheets/widgets/home_page/accessibility_statement.scss
@@ -4,10 +4,13 @@
 
 .homepage {
   #accessibility-statement {
-    background-color:#fff;
-    padding:10px;
+    background-color: #fff;
+    padding: 10px;
     h2 {
-      font-size:14px;
+      font-size: 18px;
+    }
+    a {
+      border-bottom: 2px solid rgba(165, 0, 52, 0.7);
     }
   }
 }
