--- a/app/assets/stylesheets/widgets/home_page/general_info.scss
+++ b/app/assets/stylesheets/widgets/home_page/general_info.scss
@@ -11,9 +11,11 @@
 }
 
 @media only screen and (min-width: 680px) {
-  #generalInformation { 
+  #generalInformation {
     .heading {
       margin: 0 50px 15px;
+      font-size: 40px;
+      line-height: 40px;
     }
   }
 }
