--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -71,6 +71,7 @@
     line-height: 32px;
     text-transform: none;
     font-weight: 800;
+    &.uppercase, &.lowercase, &.extended, &.thin {}
   }
   .subheading {
     margin: 0;
@@ -78,21 +79,17 @@
     font-size: 32px;
     line-height: 32px;
     text-transform: none;
-    font-weight: 100;
+    font-weight: 400;
+    &.uppercase, &.lowercase, &.extended, &.thin {}
   }
   .excerpt {
     margin: 20px 0;
     padding: 0;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 18px;
+    line-height: 24px;
     max-width: 600px;
     display: none;
-  }
-  .heading {
-    &.uppercase, &.lowercase, &.extended, &.thin {}
-  }
-  .subheading {
-    &.uppercase, &.lowercase, &.extended, &.thin {}
+    font-weight: 400;
   }
   #mastheadGradient {
     position: absolute;
@@ -199,32 +196,28 @@
     .excerpt {
       display: block;
     }
-  }  
+    .heading {
+      font-size: 48px;
+      line-height: 48px;
+    }
+  }
 }
 
 @media only screen and (min-width: 1024px) {
   #hero {
     .heading {
-      font-size: 40px;
-      line-height: 40px;
       padding-top: 70px;
-    }
-    .subheading {
-      font-size: 40px;
-      line-height: 40px;
-    }
-    .excerpt {
-      font-size: 16px;
-      line-height: 20px;
-    }
-    .heading {
+      font-size: 60px;
+      line-height: 60px;
       &.uppercase, &.lowercase, &.extended {}
       &.thin {
-        font-size: 62px;
-        line-height: 62px;
+        // font-size: 62px;
+        // line-height: 62px;
       }
     }
     .subheading {
+      font-size: 40px;
+      line-height: 48px;
       &.uppercase, &.lowercase, &.extended, &.thin {}
     }
   }
@@ -233,23 +226,11 @@
 @media only screen and (min-width: 1180px) {
   #hero {
     .heading {
-      font-size: 48px;
-      line-height: 48px;
       padding-top: 100px;
-    }
-    .subheading {
-      font-size: 48px;
-      line-height: 48px;
-    }
-    .excerpt {
-      font-size: 18px;
-      line-height: 22px;
-    }
-    .heading {
       &.big800, &.lowercase, &.extended {}
       &.thin {
-        font-size: 62px;
-        line-height: 62px;
+        // font-size: 62px;
+        // line-height: 62px;
       }
     }
     .subheading {
