Fixed undefined variable bug

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -820,7 +820,7 @@ html.omni-nav-v2 {
       display: none;
       vertical-align: middle;
       padding: 1px 0 0 20px;
-      border-left: 1px solid $alto;
+      border-left: 1px solid #cfcfcf;
       font-size: 18px;
 
       @include media($medium-screen) {
