Changed default font of h3-h6 to Futura regular

--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -80,6 +80,7 @@
     line-height: 32px;
     text-transform: none;
     font-weight: 400;
+    font-family: $futura-regular;
     &.uppercase, &.lowercase, &.extended, &.thin {}
   }
   .excerpt {
@@ -185,7 +186,7 @@
         letter-spacing: 4px;
       }
       &.thin {
-        font-weight: 100;
+        // font-weight: 100;
       }
     }
   }
