--- a/app/assets/stylesheets/base/defaults.scss
+++ b/app/assets/stylesheets/base/defaults.scss
@@ -377,7 +377,7 @@ h1, h2 {
   font-weight: 800;
 }
 
-h2, h3, h4, h5, h6 {
+h3, h4, h5, h6 {
   font-family: $font-stack-heading;
   font-weight: 200;
 }
