--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -237,7 +237,7 @@
 	box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.3);
 }
 
-@mixin button($bg-color: $red, $text-color: white) {
+@mixin button($bg-color: $cu-red, $text-color: white) {
 	display: inline-block;
 	padding: 15px 25px;
 	font-size: 16px;
