--- a/app/assets/stylesheets/base/defaults.scss
+++ b/app/assets/stylesheets/base/defaults.scss
@@ -52,6 +52,9 @@ body {
   &.personnel .main {
 	  margin-left: 0;
 	}
+  &.new-font-theme {
+    font-family: $font-stack-body-new;
+  }
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
@@ -387,21 +390,21 @@ p, li {
 }
 
 h1, h2 {
-  font-family: $font-stack-heading-condensed;
-  font-weight: 800;
+  font-family: $font-stack-heading;
 }
 
 h3, h4, h5, h6 {
-  font-family: $font-stack-heading;
   font-weight: 200;
 }
 
 h1 {
 	font-size: 30px;
+  font-weight: 800;
 }
 
 h2 {
   font-size: 20px;
+  font-weight: 600;
   line-height: 1.2em;
 }
 
