--- a/app/assets/stylesheets/widgets/home_page/undergraduate_admission.scss
+++ b/app/assets/stylesheets/widgets/home_page/undergraduate_admission.scss
@@ -33,7 +33,7 @@
       .bigstat {
         font-size: 32px;
         line-height: 32px;
-        font-family: $font-stack-heading-condensed;
+        font-family: $font-stack-heading-new;
         color: #FFFFFF;
         margin-top: 0px;
         font-weight: 800;
