--- a/app/views/layouts/1_column.html.erb
+++ b/app/views/layouts/1_column.html.erb
@@ -8,8 +8,8 @@
 <!--[if IE 8]>    <body class="ie8 oldie phaseFour"> <![endif]-->
 <!--[if gt IE 8]><!-->
 
-<body> 
-    <div id="theme" class="<%= yield(:theme) %>">
+<body>
+    <div id="theme" class="<%= yield(:theme) %> new-font-theme">
         <span class="hidden"><a href="#main" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a></span>
 
         <div id="fb-root"></div>
@@ -38,4 +38,3 @@
     </div>
 </body>
 </html>
-
