--- a/app/views/layouts/3_column.html.erb
+++ b/app/views/layouts/3_column.html.erb
@@ -10,7 +10,7 @@
   <body>
    <!--<![endif]-->
 
-    <div id="theme" class="<%= yield(:theme) %>">
+    <div id="theme" class="<%= yield(:theme) %> new-font-theme">
       <span class="hidden"><a href="#main" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a></span>
       <div id="fb-root"></div>
       <div class="noscript">
