--- a/app/views/layouts/2_column.html.erb
+++ b/app/views/layouts/2_column.html.erb
@@ -11,7 +11,7 @@
 <body>
     <!--<![endif]-->
 
-    <div id="theme" class="<%= yield(:theme) %>">
+    <div id="theme" class="<%= yield(:theme) %> new-font-theme">
 
         <a class="skip-link" href="#main" tabindex="-1" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a>
 
