--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -13,7 +13,7 @@
         </a>
         <span class="close" id="js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
-            <title></title>
+            <title>Close</title>
             <g class="icomoon-ignore"></g>
             <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
           </svg>
@@ -27,7 +27,7 @@
         </a>
         <span class="close" id="js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
-            <title></title>
+            <title>Close</title>
             <g class="icomoon-ignore"></g>
             <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
           </svg>
@@ -50,7 +50,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -70,7 +70,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -101,7 +101,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -119,7 +119,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -135,7 +135,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -154,7 +154,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -173,7 +173,7 @@
           <span class="toggle">
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                <title></title>
+                <title>Toggle</title>
                 <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
@@ -193,7 +193,7 @@
             <span class="toggle">
               <span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                  <title></title>
+                  <title>Toggle</title>
                   <g class="icomoon-ignore"></g>
                   <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
                 </svg>
@@ -215,7 +215,7 @@
             <span class="toggle">
               <span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                  <title></title>
+                  <title>Toggle</title>
                   <g class="icomoon-ignore"></g>
                   <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
                 </svg>
