Fixed selector for new font theme h3

--- a/app/assets/stylesheets/base/defaults.scss
+++ b/app/assets/stylesheets/base/defaults.scss
@@ -386,11 +386,11 @@ p, li {
   @include paragraph;
 }
 
-h1, h2, h3 {
+h1, h2 {
   font-family: $font-stack-heading;
 }
 
-h4, h5, h6 {
+h3, h4, h5, h6 {
   font-weight: 200;
 }
 
@@ -411,6 +411,9 @@ h3 {
   line-height: 1.4em;
   margin-top: 30px;
   margin-bottom: 15px;
+  .new-font-theme & {
+    font-family: $font-stack-heading;
+  }
 }
 
 h4 {
