SiteImprove reports duplicate IDs for js-close-off-canvas trigger

--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -11,7 +11,7 @@
         <a class="<%= @page_umbrella_category[2] %> off-logo" href="/" title="<%= @page_umbrella_category[4] %>">
           <!-- logo set as background image by class -->
         </a>
-        <span class="close" id="js-close-off-canvas-nav">
+        <span class="close js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
             <title>Close</title>
             <g class="icomoon-ignore"></g>
@@ -25,7 +25,7 @@
         <a class="default off-logo" href="/" title="Chapman University Website Home Page">
           <!-- logo set as background image by class -->
         </a>
-        <span class="close" id="js-close-off-canvas-nav">
+        <span class="close js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
             <title>Close</title>
             <g class="icomoon-ignore"></g>
