Preliminary styling of new HP masthead, removed department off canvas nav logos

--- a/app/assets/stylesheets/components/big-masthead.scss
+++ b/app/assets/stylesheets/components/big-masthead.scss
@@ -19,7 +19,7 @@
       left: 0;
       box-sizing: border-box;
       height: auto;
-      background: rgba(168,36,57,0.95);
+      background: $cu-red-rgb-transparent;
       padding: 30px 32px 30px 32px;
       max-width: 100%;
       width: 100%;
@@ -189,7 +189,7 @@
   .mastheadPlaceholder {
     background-color: $cu-red;
     bottom: 30px;
-    max-width: 1130px;  
+    max-width: 1130px;
     min-height: 83px;
     position:relative;
     margin: 50px auto 0 auto;
@@ -239,7 +239,7 @@
       }
     }
   }
-  
+
   .masthead-old {
     background-color: $cu-red;
     max-width: 1024px;
@@ -258,7 +258,7 @@
       color: $white;
       padding: 5px 5% 5px 5%;
     }
-    
+
     @include bp(l) {
       position: relative;
       margin: 0 auto 0 auto;
