--- a/app/assets/stylesheets/widgets/home_page/accessibility_statement.scss
+++ b/app/assets/stylesheets/widgets/home_page/accessibility_statement.scss
@@ -10,7 +10,7 @@
       font-size: 18px;
     }
     a {
-      border-bottom: 2px solid rgba(165, 0, 52, 0.7);
+      border-bottom: 2px solid rgba($cu-red, 0.7);
     }
   }
 }
