--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -8,9 +8,10 @@
   </div>
   <section id="hero" class="dark-bg align-left" style="background-image:url('http://www.chapman.edu/_files/img/hero-panels/fallback-images/hilbert-art.jpg');">
     <div id="mastheadContent" class="maxWidth">
+      <span class="tagline" role="heading">Optional Tagline goes here</span>
       <h2>
-        <span class="heading  fast_transition" style="position: relative; left: 0px; opacity: 1;">California Scene Painting:</span>
-        <span class="subheading thin  fast_transition" style="position: relative; left: 0px; opacity: 1;">A Narrative Revolution</span>
+        <span class="heading bold fast_transition" style="position: relative; left: 0px; opacity: 1;">California Scene Painting:</span>
+        <span class="subheading thin bold fast_transition" style="position: relative; left: 0px; opacity: 1;">A Narrative Revolution</span>
       </h2>
 
       <p class="excerpt fast_transition" style="position: relative; left: 0px; opacity: 1;">The once overlooked California Scene painting movement gets the recognition it deserves and a new home at the Hilbert Museum of California Art at Chapman University.</p>
@@ -29,7 +30,7 @@
           Watch Video
         </a>
 
-        <a href="/" class="button red smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
+        <a href="/" class="button white smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
       </div>
     </div>
 
