--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -97,5 +97,5 @@ $color-chapman-gray: #dad8cf;
 
 
 // Selection colors
-$selection-background: rgba(168,36,57,0.875);
+$selection-background: rgba($cu-red, 0.875);
 $selection-color:    #ffffff;
