--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -15,7 +15,7 @@ $font-stack-heading: $futura-regular;
 $font-stack-heading-new: $futura-condensed;
 
 $cu-red: #a50034;
-$cu-red-rgb-transparent: rgba(165, 0, 52, 0.95);
+$cu-red-rgb-transparent: rgba($cu-red, 0.95);
 $cu-dark-red: #851c2b;
 $cu-off-white: #f7f6f0;
 $cu-light-grey: #eaeaea;
