--- a/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
@@ -73,7 +73,7 @@
       display: block;
       height: 285px;
       position: relative;
-      background: #a82439;
+      background: $cu-red;
     }
   }
 
@@ -82,7 +82,7 @@
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    background: #a82439;
+    background: $cu-red;
     top: 220px;
     position: absolute;
     -webkit-transition: all 0.5s;
