--- a/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
@@ -118,7 +118,7 @@ $tile_width: 335px;
 	}
 
 	.new_ribbon {
-		background: #A82439;
+		background: $cu-red;
 		color: white;
 		font-size: 10px;
 		height: 20px;
@@ -142,7 +142,7 @@ $tile_width: 335px;
 		}
 
 		&:before {
-			border-color: #a82439 transparent;
+			border-color: $cu-red transparent;
 			border-style: solid;
 			border-width: 10px 3px;
 			content: ' ';
@@ -249,7 +249,7 @@ $tile_width: 335px;
 			vertical-align: middle;
 			text-transform: none;
 			a { color: inherit; }
-			a:hover {color: #a82439}
+			a:hover {color: $cu-red}
 			a p { font-size: inherit; line-height: inherit; margin: 0 0 0 14px; }
 
 			svg { width: 1em; height: 1em; display: block; float: left; }
@@ -288,7 +288,7 @@ $tile_width: 335px;
 			}
 
 			a:hover {
-				color: #a82439;
+				color: $cu-red;
 			}
 		}
 
@@ -298,7 +298,7 @@ $tile_width: 335px;
 
 		.message .tag {
 			background: #f7f6f0;
-			border-left: 5px solid #a82439;
+			border-left: 5px solid $cu-red;
 			border-radius: 3px;
 			color: #62605a;
 			display: inline-block;
@@ -310,7 +310,7 @@ $tile_width: 335px;
 
 			&:hover {
 				background: #eceadf;
-				color: #a82439;
+				color: $cu-red;
 				padding-left: 25px;
 			}
 		}
@@ -408,4 +408,3 @@ $tile_width: 335px;
   	color: $bg-silver-gray;
   }
 }
-
