--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -22,15 +22,15 @@
   clear: both;
   position: relative;
   overflow: hidden;
-  height: 300px;
+  height: 360px;
   padding: 15px 0 80px 0;
   background: #333333 no-repeat center;
   background-size: cover;
   color: #FFFFFF;
   .button {
     $shadow: 0.125em 0.25em 0.25em 0 $shadow-color;
-    margin-right: 10px;
-    padding: 12px 25px;
+    margin: 5px;
+    padding: 13px 25px 12px;
     -webkit-box-shadow: $shadow;
     -moz-box-shadow: $shadow;
     box-shadow: $shadow;
@@ -243,12 +243,12 @@
       font-size: 48px;
       line-height: 48px;
       &.bold {
-        font-size: 48px;
+        font-size: 60px;
       }
     }
     .subheading {
       &.bold {
-        font-size: 80px;
+        font-size: 100px;
       }
     }
   }
@@ -262,15 +262,9 @@
         // font-size: 62px;
         // line-height: 62px;
       }
-      &.bold {
-        font-size: 72px;
-      }
     }
     .subheading {
       &.uppercase, &.lowercase, &.extended, &.thin {}
-      &.bold {
-        font-size: 120px;
-      }
     }
     #mastheadContent {
       padding-top: 70px;
@@ -288,11 +282,17 @@
         // font-size: 62px;
         // line-height: 62px;
       }
+      &.bold {
+        font-size: 75px;
+      }
     }
     .subheading {
       font-size: 40px;
       line-height: 48px;
       &.big800, &.lowercase, &.extended, &.thin {}
+      &.bold {
+        font-size: 130px;
+      }
     }
     #mastheadContent {
       padding-top: 100px;
