added aria-label to nav tags in OmniNav for accessibility (siteimprove)

--- a/app/views/omni_nav_v2/_global_nav.html.erb
+++ b/app/views/omni_nav_v2/_global_nav.html.erb
@@ -1,5 +1,5 @@
 <div id="cu-global-nav">
-  <nav>
+  <nav aria-label="global navigation bar">
     <ul class="global-nav-links">
       <li class="primary-link">
         <a>About</a>
