--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="utility-nav">
-  <nav>
+  <nav aria-label="utility navigation bar">
     <div class="utility-nav-container utility-links">
       <ul class="utility-list">
         <li class="utility-cell utility-has-dropdown">
