--- a/app/assets/stylesheets/layout_old/home/main.scss
+++ b/app/assets/stylesheets/layout_old/home/main.scss
@@ -14,6 +14,12 @@
     overflow: visible;
     z-index: 100;
   }
+  &.homepage #mastheadNavigation { // Importants added because of display: block inline style -SH
+    display: none !important;
+    @include bp(wildcard-min, 680px) {
+      display: none !important;
+    }
+  }
   #mastheadNavigation {
     position: absolute;
     top: 250px;
@@ -21,7 +27,7 @@
     z-index: 100;
     display: none;
     @media only screen and (min-width: 480px) {
-      top: 15px;    
+      top: 15px;
     }
     .smallButton {
       color: $white;
