--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -4,7 +4,7 @@
 
 @media only screen and (min-width: 680px) {
   .homepage #mastheadNavigation {
-    display: block;
+    display: none;
   }
 }
 
@@ -18,16 +18,22 @@
 }
 
 #hero {
+  $shadow-color: rgba(0, 0, 0, 0.5);
   clear: both;
   position: relative;
   overflow: hidden;
-  height: 300px;
+  height: 360px;
   padding: 15px 0 80px 0;
   background: #333333 no-repeat center;
   background-size: cover;
   color: #FFFFFF;
   .button {
-    margin-right: 10px;
+    $shadow: 0.125em 0.25em 0.25em 0 $shadow-color;
+    margin: 5px;
+    padding: 13px 25px 12px;
+    -webkit-box-shadow: $shadow;
+    -moz-box-shadow: $shadow;
+    box-shadow: $shadow;
   }
   .actions {
     margin-top: 25px;
@@ -39,7 +45,6 @@
   &.dark-bg {
     .heading, .subheading, .excerpt {
       color: #FFFFFF;
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     }
   }
   &.light-bg {
@@ -56,6 +61,9 @@
       margin-left: auto !important;
       margin-right: 0 !important;
     }
+    .tagline:after {
+      margin: 0.875em 0 0 auto;
+    }
   }
   &.align-center {
     text-align: center;
@@ -63,14 +71,25 @@
       margin-left: auto !important;
       margin-right: auto !important;
     }
+    .tagline:after {
+      margin: 0.875em auto 0;
+    }
+  }
+  .heading, .subheading {
+    display: block;
   }
   .heading {
     margin: 0;
-    padding: 0;
     font-size: 32px;
     line-height: 32px;
     text-transform: none;
-    font-weight: 800;
+    &.uppercase, &.lowercase, &.extended, &.thin {}
+    &.bold {
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 1;
+    }
   }
   .subheading {
     margin: 0;
@@ -78,21 +97,23 @@
     font-size: 32px;
     line-height: 32px;
     text-transform: none;
-    font-weight: 100;
+    font-weight: 400;
+    font-family: $font-stack-heading;
+    &.uppercase, &.lowercase, &.extended, &.thin {}
+    &.bold {
+      @include condensed-heading;
+      font-size: 60px;
+      line-height: 0.9;
+    }
   }
   .excerpt {
     margin: 20px 0;
     padding: 0;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 18px;
+    line-height: 24px;
     max-width: 600px;
     display: none;
-  }
-  .heading {
-    &.uppercase, &.lowercase, &.extended, &.thin {}
-  }
-  .subheading {
-    &.uppercase, &.lowercase, &.extended, &.thin {}
+    font-weight: 400;
   }
   #mastheadGradient {
     position: absolute;
@@ -117,6 +138,7 @@
     /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );
     /* IE6-9 */
+    display: none;
   }
   #mastheadBackground {
     position: absolute;
@@ -129,6 +151,24 @@
       width: 100%;
       height: auto;
     }
+  }
+  .tagline {
+    font-family: $futura-regular;
+    text-transform: uppercase;
+    font-size: 24px;
+    line-height: 24px;
+    display: inline-block;
+    &:after {
+      content: '';
+      display: block;
+      background-color: $white;
+      width: 75px;
+      height: 2px;
+      margin: 0.875em 0 0;
+    }
+  }
+  .heading, .subheading, .tagline, .excerpt {
+    text-shadow: 0.05em 0.05em 0.1em $shadow-color;
   }
 }
 
@@ -199,33 +239,35 @@
     .excerpt {
       display: block;
     }
-  }  
+    .heading {
+      font-size: 48px;
+      line-height: 48px;
+      &.bold {
+        font-size: 60px;
+      }
+    }
+    .subheading {
+      &.bold {
+        font-size: 100px;
+      }
+    }
+  }
 }
 
 @media only screen and (min-width: 1024px) {
   #hero {
     .heading {
-      font-size: 40px;
-      line-height: 40px;
-      padding-top: 70px;
-    }
-    .subheading {
-      font-size: 40px;
-      line-height: 40px;
-    }
-    .excerpt {
-      font-size: 16px;
-      line-height: 20px;
-    }
-    .heading {
       &.uppercase, &.lowercase, &.extended {}
       &.thin {
-        font-size: 62px;
-        line-height: 62px;
+        // font-size: 62px;
+        // line-height: 62px;
       }
     }
     .subheading {
       &.uppercase, &.lowercase, &.extended, &.thin {}
+    }
+    #mastheadContent {
+      padding-top: 70px;
     }
   }
 }
@@ -233,27 +275,31 @@
 @media only screen and (min-width: 1180px) {
   #hero {
     .heading {
-      font-size: 48px;
-      line-height: 48px;
-      padding-top: 100px;
-    }
-    .subheading {
-      font-size: 48px;
-      line-height: 48px;
-    }
-    .excerpt {
-      font-size: 18px;
-      line-height: 22px;
-    }
-    .heading {
+      font-size: 60px;
+      line-height: 60px;
       &.big800, &.lowercase, &.extended {}
       &.thin {
-        font-size: 62px;
-        line-height: 62px;
+        // font-size: 62px;
+        // line-height: 62px;
+      }
+      &.bold {
+        font-size: 75px;
       }
     }
     .subheading {
+      font-size: 40px;
+      line-height: 48px;
       &.big800, &.lowercase, &.extended, &.thin {}
+      &.bold {
+        font-size: 130px;
+      }
+    }
+    #mastheadContent {
+      padding-top: 100px;
+    }
+    .tagline {
+      font-size: 30px;
+      line-height: 30px;
     }
   }
 }
