--- a/app/assets/stylesheets/widgets/home_page/blog_stories.scss
+++ b/app/assets/stylesheets/widgets/home_page/blog_stories.scss
@@ -41,7 +41,7 @@
       }
       .title {
         text-transform: none;
-        color: #a50034;
+        color: $cu-red;
         font-size: 22px;
         line-height: 26px;
         margin: 0;
