--- a/app/assets/stylesheets/widgets/three-box-callout.scss
+++ b/app/assets/stylesheets/widgets/three-box-callout.scss
@@ -32,7 +32,7 @@
     }
     .caption {
       height: 50px;
-      background-color: #a50034;
+      background-color: $cu-red;
       top: 0px;
       .text {
         text-align: center;
