--- a/app/assets/stylesheets/widgets/home_page/accessibility_statement.scss
+++ b/app/assets/stylesheets/widgets/home_page/accessibility_statement.scss
@@ -4,7 +4,7 @@
 
 .homepage {
   #accessibility-statement {
-    background-color: #fff;
+    background-color: $white;
     padding: 10px;
     h2 {
       font-size: 18px;
